--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>HOME</h1>
-    <P><a href="vendas.html">IR PARA VENDAS</a></P>
+    <P><a href="vendas.html">IR P/ VENDAS</a></P>
 
 </body>
 
