--- a/vendas.html
+++ b/vendas.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Vendas</h1>
-    <p><a href="index.html">VOLTAR PARA HOME</a></p>
+    <p><a href="index.html">VOLTAR P/ HOME</a></p>
 </body>
 
 </html>
