Squashed commit of the following:
commit a3992d006c407a502cd69375000b2b2248c57a60
Author: Heitor Cruz <111433592+HeitorSC@users.noreply.github.com>
Date:   Wed Jan 24 18:51:08 2024 -0300

    Para banch alternativa

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1>Vendas</h1>
-    <p><a href="index.html">VOLTAR P/ HOME</a></p>
+    <h1>HOME</h1>
+    <P><a href="vendas.html">IR P/ VENDAS</a></P>
+
 </body>
 
 </html>
