Adicionado o .gitignore para ignorar html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>HOME</h1>
     <P><a href="vendas.html">IR P/ VENDAS</a></P>
+    <p>Teste apóso gitignore ignorar páginas html</p>
 
 </body>
 
